--- a/build.gradle
+++ b/build.gradle
@@ -25,6 +25,8 @@ allprojects {
 	group "org.springframework.boot"
 
 	repositories {
+		maven { url 'https://maven.aliyun.com/nexus/content/groups/public/' }
+		maven { url 'https://maven.aliyun.com/nexus/content/repositories/jcenter' }
 		mavenCentral()
 		if (version.contains('-')) {
 			maven { url "https://repo.spring.io/milestone" }
