--- a/settings.gradle
+++ b/settings.gradle
@@ -1,5 +1,7 @@
 pluginManagement {
 	repositories {
+		maven { url 'https://maven.aliyun.com/nexus/content/groups/public/' }
+		maven { url 'https://maven.aliyun.com/nexus/content/repositories/jcenter' }
 		mavenCentral()
 		gradlePluginPortal()
 		maven {
@@ -23,7 +25,7 @@ pluginManagement {
 
 plugins {
 	id "com.gradle.enterprise" version "3.10.3"
-	id "io.spring.ge.conventions" version "0.0.11"
+//	id "io.spring.ge.conventions" version "0.0.11"
 }
 
 rootProject.name="spring-boot-build"
